--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,28 @@
-<div>
-  <h1><a href="/">Django Girls Blog</a></h1>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <h1><a href="/">Django Girls Blog</a></h1>
+      </div>
 
-{% for post in posts %}
-<div>
-  <p>published: {{ post.published_date }}</p>
-  <h2><a href="">{{ post.title }}</a></h2>
-  <p>{{ post.text|linebreaksbr }}</p>
-</div>
-{% endfor %}
+      {% for post in posts %}
+      <div class="post">
+        <p>published: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+      {% endfor %}
+    </div>
+  </body>
+</html>
